# trino-dbt

./: .env.example  .gitignore  README.md  docker-compose.yml
app/: README.md  catalog.py  iceberg_loader.py  load.py  pyproject.toml  queries.sql  rest_adapter.py  settings.py
dbt/: README.md  pyproject.toml
dbt/jaffle_shop/: .sqlfluff  dbt_project.yml  profiles.yml
dbt/jaffle_shop/macros/: generate_schema_name.sql  optimize_tables.sql
dbt/jaffle_shop/models/: source.yml
dbt/jaffle_shop/models/marts/: customers.sql
dbt/jaffle_shop/models/remote_pg/: orders.sql
dbt/jaffle_shop/models/staging/: stg_customers.sql  stg_orders.sql  stg_orders_items.sql
trino-etc/catalog/: postgresql.properties
